Cleaned repo: removed diagnostics, logs, zips, debug scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,13 @@
-// Placeholder for tsconfig.json
+{
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "jsx": "preserve"
+  },
+  "include": ["**/*.ts"]
+}
