--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-// Placeholder for package.json
+{
+  "name": "qix-clone",
+  "version": "1.0.0",
+  "description": "Browser-based Qix arcade game clone",
+  "main": "main.ts",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "howler": "^2.2.4",
+    "three": "^0.158.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.176.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-plugin-string": "^1.2.3"
+  }
+}
